# next-editor

./: .dockerignore  .gitattributes  .gitignore  .prettierignore  .vercelignore  ARCHITECTURE.md  CLAUDE.md  Caddyfile  Dockerfile  FIRST_TIME_PAUSE_FIX.md  LICENSE  PROJECT_STRUCTURE.md  README.md  SELF_HOSTING.md  SLIDES_USAGE.md  STREAMING_PLAYBACK.md  asconfig.json  camera-recording-plan.md  docker-compose.yml  enhancements.md  eslint.config.js  fix-plan.md  index.html  memory-leak-review.md  package-lock.json  package.json  plan.md  preview-plan.md  progress.md  review.md  rolldown.config.js  stream-oriented-data-model-plan.md  testfile.ne  tsconfig.app.json  tsconfig.json  tsconfig.test.json  vercel.json  vite.config.ts  vite.lib.config.ts  vitest.config.ts  (+1 more)
.claude/: settings.local.json
.github/: FUNDING.yml
docs/: MONACO_EDITOR_RECORDING_SYSTEM.md  core.md  data-flow.md  data-structures.md  state-machines.md  streaming-playback.md
public/: introduction.en.vtt  introduction.ne  lessons.json  next-editor.d.ts  next-editor.js  next-editor.wasm  next-editor.wasm.map  next-editor.wat  steganography.wasm
scripts/: benchmark-dmp-codec.mjs  benchmark-go-codec.mjs  benchmark-wasm-diff.mjs  build-dmp-wasm.mjs  build-wasm-go.sh  measure-recording-size.mjs  migrate-ne.ts  wasm-go-loader.mjs
src/: App.css  App.tsx  index.css  main.tsx  queryClient.ts  router.tsx  vite-env.d.ts
src/core/dmp/: Cargo.toml  README.md
src/core/dmp/src/: lib.rs
tube/: .env.example  Caddyfile  index.html  package.json  plan.md  progress.md  tsconfig.json  vercel.json  vite.config.ts
(+309 files in other folders)
